objects/Booking_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Booking_Line_Item_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Booking Line Item Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Booking Line Items</relationshipLabel>
        <relationshipName>Booking_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Consignment_Number__c</fullName>
        <description>Consignment Number for this Booking Line Item</description>
        <inlineHelpText>Consignment Number for this Booking Line Item</inlineHelpText>
        <label>Consignment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <label>Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <description>Field to save one item&apos;s height in meters</description>
        <inlineHelpText>Item height in meters</inlineHelpText>
        <label>Height (cm)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Field to save one item&apos;s length in meters</description>
        <inlineHelpText>Item length in meters</inlineHelpText>
        <label>Length (cm)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Items__c</fullName>
        <label>Number of Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Item_Weight__c</fullName>
        <formula>IF(ISBLANK(Number_of_Items__c),0,Number_of_Items__c) * IF(ISBLANK(Weight__c),0,Weight__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Item Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <description>total volume in cm^3</description>
        <formula>IF(ISNULL(Height__c) || ISNULL(Length__c) || ISNULL(Width__c),0,Height__c * Length__c * Width__c) * Number_of_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Field to save one item&apos;s weight in kilograms</description>
        <inlineHelpText>Item weight in kilograms</inlineHelpText>
        <label>Weight (kg)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <description>Field to save one item&apos;s width in meters</description>
        <inlineHelpText>Item width in meters</inlineHelpText>
        <label>Width (cm)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Booking Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Line-{0000}</displayFormat>
        <label>Booking Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dimensions_have_to_be_positive_integer</fullName>
        <active>true</active>
        <description>All dimensions must be set and be a number greater than 0.</description>
        <errorConditionFormula>(ISBLANK( Height__c ) || Height__c &lt;= 0 || ISBLANK( Length__c ) || Length__c &lt;= 0 || ISBLANK( Width__c ) || Width__c &lt;= 0) &amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>All dimensions must be set and be a number greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Height_has_to_be_integer</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( Height__c ) &lt;&gt; Height__c</errorConditionFormula>
        <errorMessage>Height cannot have any decimal places - Please Correct Dimensions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Length_has_to_be_integer</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( Length__c ) &lt;&gt; Length__c</errorConditionFormula>
        <errorMessage>Length cannot have any decimal places - Please Correct Dimensions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_height_210</fullName>
        <active>true</active>
        <description>every item must have a max length, width or height of 3.6m</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(Height__c)) &amp;&amp; Height__c &gt; 210 &amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>Maximum Height is 210cm - Please Correct Dimensions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_length_360</fullName>
        <active>true</active>
        <description>every item must have a max length, width or height of 3.6m</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(Length__c)) &amp;&amp; Length__c &gt; 360 &amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>Maximum Length is 360cm - Please Correct Dimensions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_width_180</fullName>
        <active>true</active>
        <description>every item must have a max length, width or height of 3.6m</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(Width__c)) &amp;&amp; Width__c  &gt; 180 &amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>Maximum Width is 180cm - Please Correct Dimensions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoI_has_to_be_positive_integer</fullName>
        <active>true</active>
        <description>Number of Items must be set and be a number greater than 0.</description>
        <errorConditionFormula>(ISBLANK( Number_of_Items__c ) || Number_of_Items__c &lt;= 0) &amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>Number of Items must be set and be a number greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Items_required</fullName>
        <active>true</active>
        <description>You must enter Number of Items.</description>
        <errorConditionFormula>ISBLANK( Number_of_Items__c )</errorConditionFormula>
        <errorMessage>You must enter Number of Items.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weight_has_to_be_positive_integer</fullName>
        <active>true</active>
        <description>Weight must be set and be a number greater than 0.  This does not apply for booking line items created in Universe as they are created with a weight of blank by default.</description>
        <errorConditionFormula>(ISBLANK( Weight__c ) || Weight__c &lt;= 0) 
&amp;&amp; NOT($Profile.Name = &apos;Integration User&apos;)
&amp;&amp; NOT (CreatedBy.Profile.Name = &apos;Integration User&apos;)</errorConditionFormula>
        <errorMessage>Weight must be set and be a number greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Width_has_to_be_integer</fullName>
        <active>true</active>
        <errorConditionFormula>FLOOR( Width__c ) &lt;&gt; Width__c</errorConditionFormula>
        <errorMessage>Width cannot have any decimal places - Please Correct Dimensions.</errorMessage>
    </validationRules>
</CustomObject>